--- a/index.html
+++ b/index.html
@@ -477,7 +477,7 @@
                             <th>Type</th>
                             <th>Severity</th>
                             <th>Status</th>
-                            <th>Date</th>
+                            <th>Time</th>
                           </tr>
                         </thead>
                         <tbody>
@@ -487,7 +487,7 @@
                             <td>Road Accident</td>
                             <td>Mid</td>
                             <td>Incoming ambulance</td>
-                            <td>14/6/20</td>
+                            <td>5.50PM</td>
                           </tr>
                           <tr>
                             <td>Garrett Tan</td>
@@ -495,7 +495,7 @@
                             <td>Fire</td>
                             <td>Low</td>
                             <td>Ambulance reached</td>
-                            <td>14/6/20</td>
+                            <td>5.48PM</td>
                           </tr>
                           <tr>
                             <td>Ashton Chan</td>
@@ -503,7 +503,7 @@
                             <td>Cardiac Arrest</td>
                             <td>High</td>
                             <td>CPR</td>
-                            <td>14/6/20</td>
+                            <td>5.43PM</td>
                           </tr>
                           <tr>
                             <td>Henry Lee</td>
@@ -511,7 +511,7 @@
                             <td>Road Accident</td>
                             <td>Mid</td>
                             <td>Incoming ambulance</td>
-                            <td>14/6/20</td>
+                            <td>5.43PM</td>
                           </tr>
                           <tr>
                             <td>Garrett Tan</td>
@@ -519,7 +519,7 @@
                             <td>Fire</td>
                             <td>Low</td>
                             <td>Ambulance reached</td>
-                            <td>14/6/20</td>
+                            <td>5.41PM</td>
                           </tr>
                           <tr>
                             <td>Ashton Chan</td>
@@ -527,7 +527,7 @@
                             <td>Cardiac Arrest</td>
                             <td>High</td>
                             <td>CPR</td>
-                            <td>14/6/20</td>
+                            <td>5.40PM</td>
                           </tr>
                           <tr>
                             <td>Henry Lee</td>
@@ -535,7 +535,7 @@
                             <td>Road Accident</td>
                             <td>Mid</td>
                             <td>Incoming ambulance</td>
-                            <td>14/6/20</td>
+                            <td>5.36PM</td>
                           </tr>
                           <tr>
                             <td>Garrett Tan</td>
@@ -543,7 +543,7 @@
                             <td>Fire</td>
                             <td>Low</td>
                             <td>Ambulance reached</td>
-                            <td>14/6/20</td>
+                            <td>5.32PM</td>
                           </tr>
                           <tr>
                             <td>Ashton Chan</td>
@@ -551,7 +551,7 @@
                             <td>Cardiac Arrest</td>
                             <td>High</td>
                             <td>CPR</td>
-                            <td>14/6/20</td>
+                            <td>5.30PM</td>
                           </tr>
                           <tr>
                             <td>Henry Lee</td>
@@ -559,7 +559,7 @@
                             <td>Road Accident</td>
                             <td>Mid</td>
                             <td>Incoming ambulance</td>
-                            <td>14/6/20</td>
+                            <td>5.28PM</td>
                           </tr>
                           <tr>
                             <td>Garrett Tan</td>
@@ -567,7 +567,7 @@
                             <td>Fire</td>
                             <td>Low</td>
                             <td>Ambulance reached</td>
-                            <td>14/6/20</td>
+                            <td>5.24PM</td>
                           </tr>
                           <tr>
                             <td>Ashton Chan</td>
@@ -575,7 +575,7 @@
                             <td>Cardiac Arrest</td>
                             <td>High</td>
                             <td>CPR</td>
-                            <td>14/6/20</td>
+                            <td>5.21PM</td>
                           </tr>
                           <tr>
                             <td>Ashton Chan</td>
@@ -583,7 +583,7 @@
                             <td>Cardiac Arrest</td>
                             <td>High</td>
                             <td>CPR</td>
-                            <td>14/6/20</td>
+                            <td>5.21PM</td>
                           </tr>
                           <tr>
                             <td>Ashton Chan</td>
@@ -591,7 +591,7 @@
                             <td>Cardiac Arrest</td>
                             <td>High</td>
                             <td>CPR</td>
-                            <td>14/6/20</td>
+                            <td>5.17PM</td>
                           </tr>
                           <tr>
                             <td>Ashton Chan</td>
@@ -599,7 +599,7 @@
                             <td>Cardiac Arrest</td>
                             <td>High</td>
                             <td>CPR</td>
-                            <td>14/6/20</td>
+                            <td>5.13PM</td>
                           </tr>
                         </tbody>
                       </table>
@@ -607,7 +607,7 @@
                   </div>
                 </div>
               </div>
-</div>
+            </div>
               <!-- Pie Chart -->
               <div class="col-xl-4 col-lg-5">
                 <div class="card shadow mb-4">
