--- a/index.html
+++ b/index.html
@@ -609,7 +609,7 @@
               </div>
             </div>
 
-            <!-- Pie Chart -->
+            <!-- Image -->
             <div class="col-xl-4 col-lg-5">
               <div class="card shadow mb-4">
                 <!-- Card Header - Dropdown -->
@@ -629,9 +629,9 @@
                   </div>
                 </div>
                 <!-- Card Body -->
-                <div class="card" style=" height: 362px;">
+                <div class="card" style=" height: 340px;">
                   <div class="text-center" >
-                    <img class = "img-reponsiveness" style="max-height: 300px" src="https://iphone-wallpaper.pics/wallpaper/i/-/i-phone-8-wallpaper-cute-siba-dog-animal-spring-illustration-art-iphone-6-wallpaper-of-i-phone-8-wallpaper_fa8953cc15cdd73e86eea5b006b7ce2f_raw.jpg" >
+                    <img class = "img-reponsiveness" style="max-height: 280px" src="https://iphone-wallpaper.pics/wallpaper/i/-/i-phone-8-wallpaper-cute-siba-dog-animal-spring-illustration-art-iphone-6-wallpaper-of-i-phone-8-wallpaper_fa8953cc15cdd73e86eea5b006b7ce2f_raw.jpg" >
                   </div>
                     <!-- <div class="chart-pie pt-4 pb-2">
                     <canvas id="myPieChart"></canvas>
