--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
       <!-- Nav Item - Dashboard -->
       <li class="nav-item active">
         <a class="nav-link" href="index.html">
-          <i class="fas fa-fw fa-tachometer-alt"></i>
-          <span>Dashboard</span></a>
+          <i class="fas fa-fw fa-phone-square-alt"></i>
+          <span>EMS Dashboard</span></a>
       </li>
 
       <!-- Divider -->
@@ -369,7 +369,7 @@
                       <div class="h5 mb-0 font-weight-bold text-gray-800">15,956</div>
                     </div>
                     <div class="col-auto">
-                      <i class="fas fa-calendar fa-2x text-gray-300"></i>
+                      <i class="fas fa-phone-volume fa-2x text-gray-300"></i>
                     </div>
                   </div>
                 </div>
@@ -386,7 +386,7 @@
                       <div class="h5 mb-0 font-weight-bold text-gray-800">191,468</div>
                     </div>
                     <div class="col-auto">
-                      <i class="fas fa-first-aid fa-2x text-gray-300"></i>
+                      <i class="fas fa-headset fa-2x text-gray-300"></i>
                     </div>
                   </div>
                 </div>
