edit responder page

--- a/blank.html
+++ b/blank.html
@@ -332,11 +332,11 @@
         <div class="container-fluid">
 
           <!-- Page Heading -->
-          <h1 class="h3 mb-4 text-gray-800">/First Responder Page/</h1>
+          <h1 class="h3 mb-4 text-gray-800">First Responder</h1>
           <div>
             <div class="card shadow mb-4">
               <div class="card-header py-3">
-                <h6 class="m-0 font-weight-bold text-primary">Take photo of situation?</h6>
+                <h6 class="m-0 font-weight-bold text-primary">Current Situation</h6>
               </div>
               <div class="card-body">
                 Please take a photo of the current emergency situation.
@@ -353,15 +353,19 @@
             </a>
             <div class="card shadow mb-4">
               <div class="card-header py-3">
-                <h6 class="m-0 font-weight-bold text-primary">BOX1</h6>
+                <h6 class="m-0 font-weight-bold text-primary">Please Remain Calm</h6>
               </div>
               <div class="card-body">
-                Please do not worry...
+                <div class="text-center">
+                  <img class="img-fluid px-3 px-sm-2 mt-3 mb-4" style="width: 25rem;"
+                    src="https://image.freepik.com/free-vector/low-poly-fire-truck_89224-951.jpg" alt="">
+                </div>
+                <p>Please do not worry, emergency services are on their way</p>
               </div>
             </div>
             <div class="card shadow mb-4">
               <div class="card-header py-3">
-                <h6 class="m-0 font-weight-bold text-primary">BOX2</h6>
+                <h6 class="m-0 font-weight-bold text-primary">What Can You Do Now?</h6>
               </div>
               <div class="card-body">
                 idk what this is for!
