Updated navigation bar

--- a/index.html
+++ b/index.html
@@ -31,11 +31,15 @@
     <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
 
       <!-- Sidebar - Brand -->
-      <a class="sidebar-brand d-flex align-items-center justify-content-center" href="index.html">
-        <div class="sidebar-brand-icon rotate-n-15">
-          <!-- <i class="fas fa-laugh-wink"></i> -->
+      <a class="sidebar-brand align-items-center justify-content-center my-2" href="index.html">
+        <div class="row ">
+          <div class="sidebar-brand-icon mx-auto ">
+            <img height="130px" src="https://upload.wikimedia.org/wikipedia/en/thumb/b/b5/SCDF_refreshed_logo.png/220px-SCDF_refreshed_logo.png">
+          </div>
         </div>
-        <div class="sidebar-brand-text mx-3">SCDF</div>
+        <div class="row">
+          <div class="sidebar-brand-text mx-auto">Singapore Civil Defence Force</div>
+        </div>
       </a>
 
       <!-- Divider -->
