--- a/index.html
+++ b/index.html
@@ -272,9 +272,9 @@
                     <div class="status-indicator bg-success"></div>
                   </div>
                   <div class="font-weight-bold">
-                    <div class="text-truncate">Hi there! I am wondering if you can help me with a problem I've been
+                    <div class="text-truncate">Hi Sir! I am wondering if you can help me with a problem I've been
                       having.</div>
-                    <div class="small text-gray-500">Emily Fowler · 58m</div>
+                    <div class="small text-gray-500">CPL Jane Wong · 58m</div>
                   </div>
                 </a>
                 <a class="dropdown-item d-flex align-items-center" href="#">
@@ -283,9 +283,9 @@
                     <div class="status-indicator"></div>
                   </div>
                   <div>
-                    <div class="text-truncate">I have the photos that you ordered last month, how would you like them
+                    <div class="text-truncate">I have generated a new report, how would you like them
                       sent to you?</div>
-                    <div class="small text-gray-500">Jae Chun · 1d</div>
+                    <div class="small text-gray-500">SGT James Tan · 1d</div>
                   </div>
                 </a>
                 <a class="dropdown-item d-flex align-items-center" href="#">
@@ -294,9 +294,8 @@
                     <div class="status-indicator bg-warning"></div>
                   </div>
                   <div>
-                    <div class="text-truncate">Last month's report looks great, I am very happy with the progress so
-                      far, keep up the good work!</div>
-                    <div class="small text-gray-500">Morgan Alvarez · 2d</div>
+                    <div class="text-truncate">Thank you for your help!</div>
+                    <div class="small text-gray-500">SGT Teo Kai Yang · 2d</div>
                   </div>
                 </a>
                 <a class="dropdown-item d-flex align-items-center" href="#">
@@ -305,9 +304,8 @@
                     <div class="status-indicator bg-success"></div>
                   </div>
                   <div>
-                    <div class="text-truncate">Am I a good boy? The reason I ask is because someone told me that people
-                      say this to all dogs, even if they aren't good...</div>
-                    <div class="small text-gray-500">Chicken the Dog · 2w</div>
+                    <div class="text-truncate">I have reviewed last month's report. Looks good.</div>
+                    <div class="small text-gray-500">LTA Marcus Chan · 2w</div>
                   </div>
                 </a>
                 <a class="dropdown-item text-center small text-gray-500" href="#">Read More Messages</a>
@@ -320,8 +318,8 @@
             <li class="nav-item dropdown no-arrow">
               <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button" data-toggle="dropdown"
                 aria-haspopup="true" aria-expanded="false">
-                <span class="mr-2 d-none d-lg-inline text-gray-600 small">WO Eric Yap</span>
-                <img class="img-profile rounded-circle" src="https://media-exp1.licdn.com/dms/image/C5603AQEU95K-31u1gA/profile-displayphoto-shrink_200_200/0?e=1593648000&v=beta&t=iAu2QDrYJCU8eutdnvM8RPtXKHt8H_h0miJchu96hyA">
+                <span class="mr-2 d-none d-lg-inline text-gray-600 small">LTA Darren Ng</span>
+                <img class="img-profile rounded-circle" src="https://www.mha.gov.sg/images/default-source/hometeamnews/img_3113small.jpg">
               </a>
               <!-- Dropdown - User Information -->
               <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in" aria-labelledby="userDropdown">
