--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
                 </h6>
                 <a class="dropdown-item d-flex align-items-center" href="#">
                   <div class="dropdown-list-image mr-3">
-                    <img class="rounded-circle" src="https://source.unsplash.com/fn_BT9fwg_E/60x60" alt="">
+                    <img class="rounded-circle" src="https://www.mha.gov.sg/images/default-source/hometeamnews/img_3190smal.jpg" alt="">
                     <div class="status-indicator bg-success"></div>
                   </div>
                   <div class="font-weight-bold">
@@ -279,28 +279,28 @@
                 </a>
                 <a class="dropdown-item d-flex align-items-center" href="#">
                   <div class="dropdown-list-image mr-3">
-                    <img class="rounded-circle" src="https://source.unsplash.com/AU4VPcFN4LE/60x60" alt="">
+                    <img class="rounded-circle" src="https://www.mha.gov.sg/images/default-source/hometeamnews/img_2932.jpg" alt="">
                     <div class="status-indicator"></div>
                   </div>
                   <div>
                     <div class="text-truncate">I have generated a new report, how would you like them
                       sent to you?</div>
-                    <div class="small text-gray-500">SGT James Tan · 1d</div>
+                    <div class="small text-gray-500">SGT Haresh Sharma · 1d</div>
                   </div>
                 </a>
                 <a class="dropdown-item d-flex align-items-center" href="#">
                   <div class="dropdown-list-image mr-3">
-                    <img class="rounded-circle" src="https://source.unsplash.com/CS2uCrpNzJY/60x60" alt="">
+                    <img class="rounded-circle" src="https://www.mha.gov.sg/images/default-source/hometeamnews/img_3132.jpg" alt="">
                     <div class="status-indicator bg-warning"></div>
                   </div>
                   <div>
                     <div class="text-truncate">Thank you for your help!</div>
-                    <div class="small text-gray-500">SGT Teo Kai Yang · 2d</div>
+                    <div class="small text-gray-500">SGT Nordin Ahmad · 2d</div>
                   </div>
                 </a>
                 <a class="dropdown-item d-flex align-items-center" href="#">
                   <div class="dropdown-list-image mr-3">
-                    <img class="rounded-circle" src="https://source.unsplash.com/Mv9hjnEUHR4/60x60" alt="">
+                    <img class="rounded-circle" src="https://www.scdf.gov.sg/images/default-source/r995/pictures/05-a-day-in-a-life-of-volunteer-medic.jpg" alt="">
                     <div class="status-indicator bg-success"></div>
                   </div>
                   <div>
