update responder page

--- a/responder_two.html
+++ b/responder_two.html
@@ -86,70 +86,22 @@
           <div>
             <div class="card shadow mb-4">
               <div class="card-header py-3">
-                <h6 class="m-0 font-weight-bold text-primary">Current Situation</h6>
+                <h6 class="m-0 font-weight-bold text-primary">Please Remain Calm</h6>
               </div>
               <div class="card-body">
-                Please take a photo of the current emergency situation.
-                <!-- <form id="form-files">
-
-                <input type="file" accept="image/*" id="file-input">
-                <button class="btn btn-secondary" type="submit" id='submitphoto' style='visibility:hidden'>Submit</button>
-                </form> -->
-                <form method="POST" enctype="multipart/form-data" action="/upload">
-                  <input type="file" name="file" multiple="">
-                  <input class="btn btn-secondary" type="submit" value="Upload">
-                </form>
-                
-                <script>
-                  // var formFiles = document.getElementById('form-files');
-
-                  // var fileInput = document.getElementById('file-input');
-                  // var filebutton = document.getElementById('submitphoto');
-                  // async function postData(url = '', data = {}) {
-                  //   // Default options are marked with *
-                  //   const response = await fetch(url, {
-                  //     method: 'POST', // *GET, POST, PUT, DELETE, etc.
-                  //     mode: 'cors', // no-cors, *cors, same-origin
-                  //     cache: 'no-cache', // *default, no-cache, reload, force-cache, only-if-cached
-                  //     credentials: 'same-origin', // include, *same-origin, omit
-                  //     headers: {
-                  //       'Content-Type': 'application/json'
-                  //       // 'Content-Type': 'application/x-www-form-urlencoded',
-                  //     },
-                  //     redirect: 'follow', // manual, *follow, error
-                  //     referrerPolicy: 'no-referrer', // no-referrer, *no-referrer-when-downgrade, origin, origin-when-cross-origin, same-origin, strict-origin, strict-origin-when-cross-origin, unsafe-url
-                  //     body: JSON.stringify(data) // body data type must match "Content-Type" header
-                  //   });
-                  //   return response.json(); // parses JSON response into native JavaScript objects
-                  // }
-                  // function handleFiles() {
-                  //   console.log(this.files)
-                  //   postData('/send_image', {
-
-                  //     "image": this.files,
-                  //   })
-                  //     .then(data => { }) /* now you can work with the file list */
-                  // }
-                  // formFiles.addEventListener('submit', function (e) {
-                  //   e.preventDefault();
-                  //   var formData = new FormData();
-                  //   var request = new XMLHttpRequest();
-                  //   fileList = fileInput.files
-                  //   console.log(fileList)
-                  //   for (var i = 0; i < fileList.length; i++) {
-                  //     formData.append('files[]', fileList[i]);
-                  //   }
-                  //   request.open('POST', '/upload');
-                  //   request.send(formData);
-                  // });
-
-                  // fileInput.addEventListener('change', function (e) {
-                  //   e.preventDefault();
-                  //   filebutton.style.visibility='visible';
-                  // },false);
-
-                  
-                </script>
+                <div class="text-center">
+                  <img class="img-fluid px-3 px-sm-2 mt-3 mb-4" style="width: 25rem;"
+                    src="https://image.freepik.com/free-vector/low-poly-fire-truck_89224-951.jpg" alt="">
+                </div>
+                <p>Please do not worry, emergency services are on their way</p>
+              </div>
+            </div>
+            <div class="card shadow mb-4">
+              <div class="card-header py-3">
+                <h6 class="m-0 font-weight-bold text-primary">What Can You Do Now?</h6>
+              </div>
+              <div class="card-body">
+                idk what this is for!
               </div>
             </div>
           </div>
